renamed 'markup' folder to 'documentation'

--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -78,7 +78,9 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 {% endverbatim %}
 		</div>
 		<div class="tab-pane" id="doc">
-			{% include 'markup/html/FluidPropsCalculator.html' %}
+			<div class="docview">
+				{% include 'documentation/html/FluidPropsCalculator.html' %}
+			</div>
 		</div>
 	</div>	
 </div>
