--- a/templates/UnitConverter.html
+++ b/templates/UnitConverter.html
@@ -97,7 +97,7 @@ angular.module('SmoConvert', ['ui.bootstrap', 'smo'])
 <div ng-app="SmoConvert" ng-controller="SmoConvertController">
 	<h1 class="title">Unit converter</h1>
 	<div ng-form name="myForm">
-		<div unit-input-view="input"></div>
+		<div converter-input-view="input"></div>
 	</div>					
 <!-- 	<div ng-show="input.inputsObtained"><button ng-disabled="!myForm.$valid" class="btn btn-default" ng-click="convert()">Convert</button></div> -->
 <!-- 	<div ng-if="!input.autoFetch"><div unit-input-view="input"></div> -->
