Added energy units to unit converter
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/static/css/SmoInputOutputView.css
+++ b/static/css/SmoInputOutputView.css
@@ -95,3 +95,71 @@
 	margin-left: 160px; 
 	color:red;
 }
+
+/* Unit converter specific styles */
+.converter {
+	margin-top: 40px;
+	text-align: center;
+}
+
+.converter > .super-group {
+	border-style: solid; 
+	border-top: none; 
+	border-color: #DDD; 
+	border-width: 1px; 
+	background-color: #E6E6FA;
+	padding-right: 20px;
+	display: inline-block;
+	overflow: auto;
+}
+
+.converter .choice-group {
+	display: inline-block; 
+	margin-left: 20px; 
+	vertical-align:top;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.converter .results-group {
+	display: inline-block; 
+	margin-left: 60px;  
+	vertical-align:top;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	float: right;
+}
+
+.converter .select-text {
+	text-align: left; 
+	font-size: medium;  
+	margin-bottom: 5px;
+	color: #0875CA;
+}
+
+.converter .field-label {
+	display: inline-block;
+	white-space: nowrap;
+	text-align: left;
+	width: 50px;
+	height: 30px;
+	color: #0875CA;
+}
+
+.converter .field-input {
+	display: inline-block; 
+	white-space: nowrap;
+	margin-left: 5px; 
+}
+
+.converter .field-input input {
+	width: 120px; 
+	height: 30px;
+}
+
+.converter .input-error {
+	text-align:left; 
+	color: red; 
+	margin-left: 5px; 
+	margin-bottom: 7px;
+}
