--- a/ThermoFluids/templates/documentation/html/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/documentation/html/FluidPropsCalculator.html
@@ -4,8 +4,8 @@
 <h1>1.&nbsp;&nbsp;&nbsp;Fluid property input</h1>
 <div class="section" id="choice-of-state-variables">
 <h2>1.1.&nbsp;&nbsp;&nbsp;Choice of state variables</h2>
-<p>A pure fluid (fluid consisting of a single chemical species) 2 variables are necessary to
-complety describe its thermodynamic state. In theory these could be any 2 of the following
+<p>For a pure fluid (fluid consisting of a single chemical species) 2 variables are necessary to
+completely describe its thermodynamic state. In theory these could be any 2 from the following
 list:</p>
 <ul class="simple">
 <li>pressure</li>
@@ -50,8 +50,8 @@ value in the range 0-1 for <em>q</em>.</p>
 <h2>1.3.&nbsp;&nbsp;&nbsp;Equations of state</h2>
 </div>
 </div>
-<div class="section" id="coolprop-pacakge">
-<h1>2.&nbsp;&nbsp;&nbsp;CoolProp pacakge</h1>
+<div class="section" id="coolprop-package">
+<h1>2.&nbsp;&nbsp;&nbsp;CoolProp package</h1>
 <p>All the fluid properties on this page are calculated using the open-source property
 package <a class="reference external" href="http://www.coolprop.org/">CoolProp</a>. CoolProp is an open-source,
 cross-platform, free property database based in C++ that includes pure fluids,
