--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -33,8 +33,8 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 	<div class="tab-content">
 		<div class="tab-pane active" id="calculator">
 			<h1 class="title">Pressure losses in pipe flow</h1>
-			<div class="contentSVG">
-				<object data="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
+			<div class="title-figure">
+				<img src="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
 			</div>		
 			<div ng-form name="myForm">
 				<div smo-input-view="inputs"></div>
