--- a/ThermoFluids/templates/ThermoFluids/HeatPump.html
+++ b/ThermoFluids/templates/ThermoFluids/HeatPump.html
@@ -33,8 +33,8 @@ angular.module('HeatPump', ['ui.bootstrap', 'smo'])
 	<div class="tab-content">
 		<div class="tab-pane active" id="calculator">
 			<h1 class="title">Heat pump</h1>
-			<div class="contentSVG">
-				<object data="{% static 'ThermoFluids/HeatPump.svg' %}" type="image/svg+xml"></object>
+			<div class="title-figure">
+				<img src="{% static 'ThermoFluids/HeatPump.svg' %}" type="image/svg+xml"></object>
 			</div>		
 			<div ng-form name="myForm">
 				<div smo-input-view="inputs"></div>
