--- a/ThermoFluids/templates/ThermoFluids/HeatPump.html
+++ b/ThermoFluids/templates/ThermoFluids/HeatPump.html
@@ -29,7 +29,7 @@ angular.module('HeatPump', ['ui.bootstrap', 'smo'])
 {% endblock %}
 
 {% block content %}
-<div ng-app="HeatPump" ng-controller="HeatPumpController" style="display: inline-block; width:85%; padding-top:20px;">
+<div ng-app="HeatPump" ng-controller="HeatPumpController">
 	<div class="tab-content">
 		<div class="tab-pane active" id="calculator">
 			<h1 class="title">Heat pump</h1>
