--- a/static/css/Base.css
+++ b/static/css/Base.css
@@ -119,10 +119,10 @@ h1.title {
 	margin-bottom: 50px;
 	margin-left: auto;
 	margin-right: auto;
-	width: 1000px;
-	background: white;
+	width: 700px;
+	/*background: white;
+	border: 1px solid black;*/
 	text-align: center;
-	border: 1px solid black;
 }
 
 .title-figure > img,
