Implemented smoString and smoBool
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -127,7 +127,8 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 							<select ng-model="selectedFluid" ng-options="fluid as fluid.label for fluid in fluidList"></select>
 						</div>
 				</div>
-
+				<div>
+				</div>
 				<table border="1" class="nice-table docutils">
 					<thead valign="bottom">
 						<tr>
