--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -64,6 +64,7 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 // 		    	}
 				$scope.fluidList = data;
 		    	$scope.selectedFluid = data[0];
+		    	console.log($scope.selectedFluid.references);
 		    })
 		    .error(function(data) {
 		    	$scope.fluids.loading = false;
@@ -121,30 +122,36 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 			<div ng-if="fluids.loading"><h2 class="loading">Loading...</h2></div>
 			<div ng-if="fluids.errorLoading"><h2 class="error">Error loading!</h2></div>
 			<div ng-if="fluids.obtained">			
-				<div class="fluidInfoContainer">
-						<div class="select-text">Select a fluid:</div>
-						<div class="field-select choice">
-							<select ng-model="selectedFluid" ng-options="fluid as fluid.label for fluid in fluidList"></select>
-						</div>
+				<div class="infoContainer">
+					<div class="select-text">Select a fluid:</div>
+					<div class="field-select choice">
+						<select ng-model="selectedFluid" ng-options="fluid as fluid.label for fluid in fluidList"></select>
+					</div>
 				</div>
 				<div>
+					<table border="1" class="nice-table docutils">
+						<thead valign="bottom">
+							<tr>
+								<th class="head">Group</th>
+								<th class="head">Properties</th>
+							</tr>
+						</thead>
+						<tbody valign="top">	
+							<tr ng-repeat="constant in selectedFluid.constants.definitions[0].groups">
+								<td ng-bind="constant.label"></td>
+								<td>
+									<div smo-field-group="constant" view-type="'output'" smo-data-source="selectedFluid.constants.values"></div>
+								</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
-				<table border="1" class="nice-table docutils">
-					<thead valign="bottom">
-						<tr>
-							<th class="head">Group</th>
-							<th class="head">Properties</th>
-						</tr>
-					</thead>
-					<tbody valign="top">	
-						<tr ng-repeat="constant in selectedFluid.constants.definitions[0].groups">
-							<td ng-bind="constant.label"></td>
-							<td>
-								<div smo-field-group="constant" view-type="'output'" smo-data-source="selectedFluid.constants.values"></div>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="infoContainer">
+					<h3>Literature References</h3>				
+					<div ng-repeat="pair in selectedFluid.references" ng-show="pair[1]">
+						<span class="label-text">{{pair[0]}}:</span> {{pair[1].author}}, <span class="italic-text">{{pair[1].title}}</span>
+					</div>			
+				</div>
 			</div>
 		</div>
 {% endverbatim %}
