Changed field groups and super-groups formatting Introduced page-container and page-section classes
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/ThermoFluids/templates/ThermoFluids/HeatPump.html
+++ b/ThermoFluids/templates/ThermoFluids/HeatPump.html
@@ -31,7 +31,7 @@ angular.module('HeatPump', ['ui.bootstrap', 'smo'])
 {% block content %}
 <div ng-app="HeatPump" ng-controller="HeatPumpController">
 	<div class="tab-content">
-		<div class="tab-pane active" id="calculator">
+		<div class="tab-pane active page-container" id="calculator">
 			<h1 class="title">Heat pump</h1>
 			<div class="title-figure">
 				<img src="{% static 'ThermoFluids/HeatPump.svg' %}" type="image/svg+xml"></object>
