--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -31,7 +31,7 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 {% block content %}
 <div ng-app="FlowResistance" ng-controller="FlowResistanceController">
 	<div class="tab-content">
-		<div class="tab-pane active" id="calculator">
+		<div class="tab-pane active page-container" id="calculator">
 			<h1 class="title">Pressure losses in pipe flow</h1>
 			<div class="title-figure">
 				<img src="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
