--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -86,7 +86,7 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 {% block content %}
 <div ng-app="FluidPropsCalculator" ng-controller="FluidPropsController">
 	<div class="tab-content">
-		<div class="tab-pane active" id="calculator">		
+		<div class="tab-pane active page-container" id="calculator">		
 			<h1 class="title">Fluid properties calculator</h1>
 			<div class="title-figure">
 				<img src="{% static 'ThermoFluids/StateDiagram3D.svg' %}" type="image/svg+xml"></object>
@@ -116,42 +116,34 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 				{% include 'documentation/html/FluidPropsCalculator.html' %}
 			</div>
 		</div>
-		<div class="tab-pane" id="fluids">
+		<div class="tab-pane page-container" id="fluids">
 {% verbatim %}	
 			<h1 class="title">Fluid information</h1>
 			<div ng-if="fluids.loading"><h2 class="loading">Loading...</h2></div>
 			<div ng-if="fluids.errorLoading"><h2 class="error">Error loading!</h2></div>
 			<div ng-if="fluids.obtained">			
-				<div class="infoContainer">
-					<div class="select-text">Select a fluid:</div>
+				
+				<div class="page-section">
+					<div class="field-select select-text">Select a fluid:</div>
 					<div class="field-select choice">
 						<select ng-model="selectedFluid" ng-options="fluid as fluid.label for fluid in fluidList"></select>
 					</div>
 				</div>
-				<div>
-					<table border="1" class="nice-table docutils">
-						<thead valign="bottom">
-							<tr>
-								<th class="head">Group</th>
-								<th class="head">Properties</th>
-							</tr>
-						</thead>
-						<tbody valign="top">	
-							<tr ng-repeat="constant in selectedFluid.constants.definitions[0].groups">
-								<td ng-bind="constant.label"></td>
-								<td>
-									<div smo-field-group="constant" view-type="'output'" smo-data-source="selectedFluid.constants.values"></div>
-								</td>
-							</tr>
-						</tbody>
-					</table>
+				
+				<div class="page-section">
+					<div style="display: inline-block;" ng-repeat="constant in selectedFluid.constants.definitions[0].groups">
+						<div smo-field-group="constant" view-type="'output'" smo-data-source="selectedFluid.constants.values">
+						</div>
+					</div>
 				</div>
-				<div class="infoContainer">
-					<h3>Literature References</h3>				
+				
+				<div class="page-section">
+					<h1>Literature References</h1>				
 					<div ng-repeat="pair in selectedFluid.references" ng-show="pair[1]">
 						<span class="label-text">{{pair[0]}}:</span> {{pair[1].author}}, <span class="italic-text">{{pair[1].title}}</span>
 					</div>			
 				</div>
+				
 			</div>
 		</div>
 {% endverbatim %}
