--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -118,21 +118,21 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 			<div ng-if="fluids.loading"><h2 class="loading">Loading...</h2></div>
 			<div ng-if="fluids.errorLoading"><h2 class="error">Error loading!</h2></div>
 			<div ng-if="fluids.obtained">							
-				<div class="page-section">
-					<div class="field-select select-text">Select a fluid:</div>
+				<div class="section">
+					<div class="field-label">Select a fluid:</div>
 					<div class="field-select choice">
 						<select ng-model="selectedFluid" ng-options="fluid as fluid.label for fluid in fluidList"></select>
 					</div>
 				</div>
 				
-				<div class="page-section">
+				<div class="section">
 					<div style="display: inline-block;" ng-repeat="constant in selectedFluid.constants.definitions[0].groups">
 						<div smo-field-group="constant" view-type="'output'" smo-data-source="selectedFluid.constants.values">
 						</div>
 					</div>
 				</div>
 				
-				<div class="page-section">
+				<div class="section">
 					<h1>Literature References</h1>				
 					<div ng-repeat="pair in selectedFluid.references" ng-show="pair[1]">
 						<span class="label-text">{{pair[0]}}:</span> {{pair[1].author}}, <span class="italic-text">{{pair[1].title}}</span>
