--- a/static/css/SmoInputOutputView.css
+++ b/static/css/SmoInputOutputView.css
@@ -31,18 +31,18 @@
 	cursor: default;
 }
 
-.tab-content.super-group {
-	border-style: solid; 
-	border-color: #777; 
-	border-width: 1px; 
+.super-group {
+/* 	border-style: solid;  */
+/* 	border-color: #777;  */
+/* 	border-width: 1px;  */
 	padding-left: 20px; 
-	padding-top: 20px;
-	padding-bottom: 20px;
+/* 	padding-top: 20px; */
+/* 	padding-bottom: 20px; */
 	overflow: auto;
 }
 
-[smo-super-group] {
-	margin-bottom: 20px;
+[smo-super-group-set] {
+/* 	margin-bottom: 20px; */
 	margin-top: 20px;
 }
 
