--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -35,13 +35,18 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 			<h1 class="title">Pressure losses in pipe flow</h1>
 			<div class="title-figure">
 				<img src="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
-			</div>		
-			<div ng-form name="myForm">
-				<div smo-input-view="inputs"></div>
-			</div>		
-			<div ng-show="inputs.inputsObtained"><button ng-disabled="!myForm.$valid" class="btn btn-default" ng-click="compute()">Compute</button></div>		
-			<br>
-			<div smo-output-view="outputs"></div>
+			</div>
+			<div class="section"> 		
+				<div ng-form name="myForm">
+					<div smo-input-view="inputs"></div>
+				</div>
+			</div>
+			<div class="section" style="margin-left: 20px;">		
+				<div ng-show="inputs.inputsObtained"><button ng-disabled="!myForm.$valid" class="btn btn-default" ng-click="compute()">Compute</button></div>
+			</div>
+			<div class="section"> 
+				<div smo-output-view="outputs"></div>
+			</div>
 		</div>
 		<div class="tab-pane" id="doc">
 			<div class="docview">
