Working on free convection.
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -34,7 +34,7 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 		<div class="tab-pane active page-container" id="calculator">
 			<h1 class="title">Pressure losses in pipe flow</h1>
 			<div class="title-figure">
-				<img src="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
+				<img src="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></img>
 			</div>		
 			<div ng-form name="myForm">
 				<div smo-input-view="inputs"></div>
