--- a/ThermoFluids/templates/ThermoFluids/HeatPump.html
+++ b/ThermoFluids/templates/ThermoFluids/HeatPump.html
@@ -34,7 +34,7 @@ angular.module('HeatPump', ['ui.bootstrap', 'smo'])
 		<div class="tab-pane active page-container" id="calculator">
 			<h1 class="title">Heat pump</h1>
 			<div class="title-figure">
-				<img src="{% static 'ThermoFluids/HeatPump.svg' %}" type="image/svg+xml"></object>
+				<img src="{% static 'ThermoFluids/HeatPump.svg' %}"></img>
 			</div>		
 			<div ng-form name="myForm">
 				<div smo-input-view="inputs"></div>
