--- a/static/css/Base.css
+++ b/static/css/Base.css
@@ -119,16 +119,17 @@ h1.title {
 	margin-bottom: 50px;
 	margin-left: auto;
 	margin-right: auto;
-	width: 700px;
 	/*background: white;
 	border: 1px solid black;*/
+	height: 300px;
 	text-align: center;
 }
 
-.title-figure > img,
-.title-figure > object {
-	width: 100%;
+.title-figure > img {
+	width: auto; 
+	height: auto;
 }
+
 
 /* Content */
 #content {
