--- a/templates/Base.html
+++ b/templates/Base.html
@@ -92,6 +92,11 @@
 	        </div>
 			<div class="col-sm-10 col-sm-offset-2 col-md-11 col-md-offset-1 main">
 			{% block content %}	
+				<div class="align-center">
+					<img width="400px" src="{% static 'ThermoFluids/StateDiagram3D.svg' %}"></img>
+					<img width="400px" src="{% static 'ThermoFluids/HeatPump.svg' %}"></img>
+				</div>		
+				
 				<div class="docview">
 				{% include 'documentation/html/Home.html' %}
 				</div>
